@@ -14,7 +14,6 @@ COM_MENUS_CONFIGURATION="Menus Configuration"
 COM_MENUS_EDIT_MODULE_SETTINGS="Edit module settings"
 COM_MENUS_ERROR_ALREADY_HOME="Menu item already set to home"
 COM_MENUS_ERROR_ONE_HOME="Only one menu item can be a home link for each language"
-COM_MENUS_ERROR_UNPUBLISH_DEFAULT_HOME="Cannot unpublish default home"
 COM_MENUS_FIELD_FEEDLINK_DESC="Display a feed link for this menu item"
 COM_MENUS_FIELD_FEEDLINK_LABEL="Feed link"
 COM_MENUS_FIELD_VALUE_IGNORE="Ignore"
