@@ -159,6 +159,7 @@ JLIB_DATABASE_ERROR_MENUTYPE_EMPTY="Menu type empty"
 JLIB_DATABASE_ERROR_MENUTYPE_EXISTS="Menu type exists: %s"
 JLIB_DATABASE_ERROR_MENUTYPE="Some menu items or some menu modules related to this menutype are checked out by another user or the default menu item is in this menu"
 JLIB_DATABASE_ERROR_MENU_CANNOT_UNSET_DEFAULT="The Language parameter for this menu item must be set to 'All'. At least one Default menu item must have Language set to All, even if the site is multilingual."
+JLIB_DATABASE_ERROR_MENU_UNPUBLISH_DEFAULT_HOME="Cannot unpublish default home"
 JLIB_DATABASE_ERROR_MENU_DEFAULT_CHECKIN_USER_MISMATCH="The current home menu for this language is checked out"
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS="Another menu item with the same parent has this alias"
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_ROOT="Another menu item has the same alias in Root. Root is the top level parent"
