@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+11-Dec-2010 Christophe Demko
+ # [#23720] *Changing Home set to ALL languages to another language and reverting = 500 + unpublish message
+ 
 10-Dec-2010 Mark Dexter
 ^ [#22730] Assign usergroup to guests (Dennis Hermacki) 
 
